Revert "Fixed the spacing on the navigation."
This reverts commit 9fe3f6f96bb773d6dbc4c2680cfe7e801546e29c.

--- a/source/assets/css/bootstrap.css
+++ b/source/assets/css/bootstrap.css
@@ -2866,7 +2866,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #e5e5e5;
 }
 .nav > li > a > img {
-  width: 85%;
+  max-width: none;
 }
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
